arob_ws/src/arob_lab_drones/log/build_2025-12-17_16-51-39/arob_lab_drones/stderr.log
  File "/root/arob_ws/src/arob_lab_drones/install/arob_lab_drones/lib/python3.10/site-packages/arob_lab_drones/drone_race.py", line 903
    print('Drone Race Node launched'
         ^
SyntaxError: '(' was never closed

